--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "next-routes": "^1.4.2",
     "node-sass": "^4.11.0",
+    "query-string": "^6.4.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-redux": "^6.0.1",
